--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9
 <link href="https://fonts.googleapis.com/css2?family=Tourney&display=swap" rel="stylesheet">
 
 <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
-<link rel="stylesheet" href="assets/css/styl.css">
+<link rel="stylesheet" href="assets/css/style.css">
 
 <title>Love Math</title>
 </head>
@@ -28,7 +28,27 @@ integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9
 
     <div class="game-area">
         <div class="controls-area">
-
+            <button class="btn btn--big btn--green">
+                <i class="fas fa-plus"></i>
+            </button>
+            <button class="btn btn--big btn--blue">
+                <i class="fas fa-minus"></i>
+            </button>
+            <button class="btn btn--big btn--orange">
+                <i class="fas fa-times"></i>
+            </button>
+            <button class="btn btn--big btn--red">
+                <i class="fas fa-divide"></i>
+            </button>
+        </div> 
+        <div class="question-area">
+            <span id="operand1">0</span>
+            <span id="operator">x</span>
+            <span id="operand2">0</span>
+            <span>=</span>
+            <p class="answer-message">Enter Answer:</p>
+            <input type="number" class="answer-box">
+            <button class="btn btn--gray">Submit Answer</button>
         </div>
     </div>
 
