--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@ integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9
             <span id="operand2">0</span>
             <span>=</span>
             <p class="answer-message">Enter Answer:</p>
-            <input type="number" class="answer-box">
-            <button data-type="submit" class="btn btn--gray">Submit Answer</button>
+            <input type="number" id="answer-box">
+           
         </div>
+        <button data-type="submit" class="btn btn--gray">Submit Answer</button>
     </div>
 
     <div class="score-area">
