--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9
            
         </div>
         <button data-type="submit" class="btn btn--gray">Submit Answer</button>
+        <button data-type="refresh" class="btn btn--r">refresh</button>
     </div>
 
     <div class="score-area">
